--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -12,5 +12,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    compile group: 'io.netty', name: 'netty-all', version: '4.1.31.Final'
 }
