--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -14,4 +14,6 @@ repositories {
 dependencies {
 
     compile group: 'io.netty', name: 'netty-all', version: '4.1.31.Final'
+    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.53'
+
 }
