--- a/example/build.gradle
+++ b/example/build.gradle
@@ -13,6 +13,7 @@ repositories {
 }
 
 dependencies {
-
-    compile group: 'io.netty', name: 'netty-all', version: '4.1.31.Final'
+    compile (
+            "io.netty:netty-all:4.1.31.Final"
+    )
 }
